<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenbg"
    tools:context=".ContractorRegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="141dp"
            android:layout_gravity="center"
            android:layout_marginTop="70sp"
            android:src="@drawable/home_service_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_message"
            android:textSize="21sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/colorDarkRed"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/nameWrapper">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:inputType="text"
                    android:hint="@string/name"
                    android:textColor="@color/colorRed"
                    android:textSize="18sp"
                    android:textColorHint="@color/colorRed"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/contactWrapper">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/contact"
                    android:inputType="phone"
                    android:hint="@string/contact_number"
                    android:textColor="@color/colorRed"
                    android:textSize="18sp"
                    android:textColorHint="@color/colorRed"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/emailAddressWrapper">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"
                android:textColor="@color/colorRed"
                android:textSize="18sp"
                android:textColorHint="@color/colorRed"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/addressWrapper">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:inputType="textLongMessage"
                android:hint="@string/address"
                android:textColor="@color/colorRed"
                android:textSize="18sp"
                android:textColorHint="@color/colorRed"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/passwordWrapper">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColor="@color/colorRed"
                android:textSize="18sp"
                android:textColorHint="@color/colorRed"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnsignupbg"
            android:id="@+id/btnRegister"
            android:text="@string/btn_register"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>