<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/screenbg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="141dp"
            android:layout_gravity="center"
            android:layout_marginTop="70sp"
            android:src="@drawable/home_service_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_signin"
            android:textSize="21sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/colorDarkRed"
            android:layout_marginTop="50sp"
            android:layout_marginBottom="20sp"/>
        
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userEmailWrapper">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email"
                android:textColor="@color/colorRed"
                android:textSize="18sp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userPasswordWrapper">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:hint="@string/enter_password"
                android:textColor="@color/colorRed"
                android:textSize="18sp"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/user_signin"
            android:background="@drawable/btnsigninbg"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>